Vertically align checkbox's hover state and fix left spacing

--- a/src/app/pages/crag/crag-routes/crag-routes.component.scss
+++ b/src/app/pages/crag/crag-routes/crag-routes.component.scss
@@ -5,8 +5,8 @@
 .route-row {
   display: flex;
   flex-direction: row;
-  padding: 6px 2px 6px 10px;
-  // TODO gap
+  padding: 6px 2px 6px 16px;
+  min-height: 40px;
 
   &.header {
     cursor: default;
